--- a/voyage/authentication/templates/authentication/user.html
+++ b/voyage/authentication/templates/authentication/user.html
@@ -257,7 +257,7 @@ transform:scale(1.01);
       <span></span>
     </div>  
     <div class="list">
-      <div class="item"><i class="fa fa-user-circle fa-4x" style="color:red;" ></i>{{firstname}}</div>
+      <div class="item"><i class="fa fa-user-circle fa-4x" style="color:red;" ></i>{{firstname}} {{lastname}}</div>
       <div class="item"><i class="fa fa-credit-card-alt" style="color:red;padding-right:10px;"></i><i class="fa fa-inr" style="color:white;padding-right:5px;"></i>{{wallet}}</div>
       <div class="item"><a   href="http://127.0.0.1:8000/login/{{userId}}/{{email}}/profile" style="text-decoration:none;color:white;" ><i class="fa fa-user" style="padding-right:10px;color:red"></i>profile</a></div>
       <div class="item"><a  href="http://127.0.0.1:8000/login/{{userId}}/{{email}}/changepassword" style="text-decoration:none;color:white;"><i class="fa fa-key" style="padding-right:10px;color:red"></i>change password</a></div>
