modified flight search

--- a/voyage/authentication/templates/authentication/flights_book.html
+++ b/voyage/authentication/templates/authentication/flights_book.html
@@ -6,7 +6,13 @@
 </head>
 <body>
 
-<h1>hello world</h1>
+<h1>{{company}}</h1>
+<h1>{{from_p}}</h1>
+<h1>{{to_p}}</h1>
+<h1>{{time_from}}</h1>
+<h1>{{time_to}}</h1>
+<h1>price {{price}}</h1>
+<h1>No of passengers {{passengers}}</h1>
 
 </body>
 </html>
