--- a/voyage/authentication/templates/authentication/flights.html
+++ b/voyage/authentication/templates/authentication/flights.html
@@ -302,7 +302,7 @@ transform:scale(1.01);
         </div>
         <div class="textbox" >
             <i class="fa fa-users" aria-hidden="true"></i>
-            <input type="text" placeholder="No of travellers" name="travellers" value="" autocomplete="off" required>
+            <input type="number" placeholder="No of travellers" name="travellers" value="" autocomplete="off" required>
         </div>
         <div class="loginbtn">
            <input class="btn" type="submit" name="" value="Search">
