--- a/voyage/authentication/templates/authentication/flights_search.html
+++ b/voyage/authentication/templates/authentication/flights_search.html
@@ -379,7 +379,7 @@ transform:scale(1.01);
 </td>
 <td style="padding:5px 30px;">
 <div class="loginbtn">
-             <input class="btn" type="submit" name="" value="Search" onclick="window.location.href='http://127.0.0.1:8000/login/{{userId}}/{{email}}/flights/book/?c1={{flights.date_pk}}&c2={{passengers}}'">
+             <input class="btn" type="submit" name="" value="Book" onclick="window.location.href='http://127.0.0.1:8000/login/{{userId}}/{{email}}/flights/book/?c1={{flights.date_pk}}&c2={{passengers}}'">
         </div>
 </td>
 </tr>
@@ -388,12 +388,24 @@ transform:scale(1.01);
 {% endfor %}
 </div>
 </td>
-{% else %}
+{% elif error_type_1 %}
 <td valign="middle" style="padding-left:50px;align:center;" >
 <div class="results" style="border-left-style:solid;margin:auto;border-color:grey; margin:4px; padding:4px;  height: 70vh;  overflow-x: hidden; overflow-y: auto; ">
-<h2 style="text-align:center;padding:20px;margin:10px;"><i class="fa fa-exclamation-triangle" aria-hidden="true" style="margin-right:10px;color:red;"></i>Flights are not available or booked for the given Route and Date</h2>
+<h2 style="text-align:center;padding:20px;margin:10px;"><i class="fa fa-exclamation-triangle" aria-hidden="true" style="margin-right:10px;color:red;"></i>Flights are not available  for the Selected Route and Date for the Selected Airline</h2>
 </div>
 </td>
+{% elif error_type_2 %}
+<td valign="middle" style="padding-left:50px;align:center;" >
+  <div class="results" style="border-left-style:solid;margin:auto;border-color:grey; margin:4px; padding:4px;  height: 70vh;  overflow-x: hidden; overflow-y: auto; ">
+  <h2 style="text-align:center;padding:20px;margin:10px;"><i class="fa fa-exclamation-triangle" aria-hidden="true" style="margin-right:10px;color:red;"></i>Flights are not available for the Selected Route and Date for the Selected Price Range</h2>
+  </div>
+  </td>
+{% else %}
+<td valign="middle" style="padding-left:50px;align:center;" >
+  <div class="results" style="border-left-style:solid;margin:auto;border-color:grey; margin:4px; padding:4px;  height: 70vh;  overflow-x: hidden; overflow-y: auto; ">
+  <h2 style="text-align:center;padding:20px;margin:10px;"><i class="fa fa-exclamation-triangle" aria-hidden="true" style="margin-right:10px;color:red;"></i>Flights are not available  for the Selected Route and Date</h2>
+  </div>
+  </td>
 {% endif %}
 </tr>
 </table>
