--- a/voyage/authentication/templates/authentication/flights_book.html
+++ b/voyage/authentication/templates/authentication/flights_book.html
@@ -1,18 +1,361 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Document</title>
+ <meta charset="UTF-8">
+  <link href="https://fonts.googleapis.com/css2?family=Piedra&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
+ <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+<style>
+body{
+  background-color:#E8E8E8;
+}
+nav{
+width:100%;
+margin:auto;
+position:fixed;
+height:70px;
+background-color:rgba(0,0,0,1);
+z-index:9999;
+}
+nav .logo{
+    float:left;
+    color:#fff;
+    padding-top:18px;
+    padding-bottom:18px;
+    padding-left:20px;
+    padding-right:20px;
+    font-family:'Piedra', cursive;
+    font-weight:bold;
+}
+#navbar ul{
+    text-align:right;
+    margin:0px;
+    padding:0px;
+    display:flex;
+    float:left;
+}
+#navbar ul li{
+    list-style:none;
+    display:inline-block;
+    padding:15px;
+}
+#navbar ul li a{
+    float:left;
+    text-decoration:none;
+    display:inline-block;
+    text-transform:uppercase;
+    color:#fff;
+    font-size:15px;
+    font-family:'ABeeZee', serif;
+    padding:9px 10px;
+    margin-right:8px;
+    position:relative;
+}
+#navbar ul li a:after{
+  background: none repeat scroll 0 0 transparent;
+  content:"";
+  position:absolute;
+  display:block;
+  background:red;
+  bottom:0;
+  height: 2px;
+  left: 50%;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  width: 0;
+}
+#navbar ul li a:hover:after{
+    color:red;
+    width:100%;
+    left:0;
+    .icon{
+  color:red;
+}
+    
+}
+#navbar ul li a.active:after{
+color:red;
+background:red;
+width:100%;
+left:0;
+}
+
+.textbox{
+    width:100%;
+    overflow:hidden;
+    font-size: 20px ;
+    padding:8px 0;
+    margin:8px 0;
+   border-bottom: 1px solid;
+    border-bottom-color: white ; 
+}
+.textbox i{
+    width:26px;
+   float:left;
+    color:white;
+   
+}
+.textbox input{
+    border:none;
+    outline:none;
+    background: white;
+    font-size: 18px;
+    color:white;
+    float:left;
+    background-color:transparent;
+    margin: 0 10px;
+}
+.loginbtn{
+    text-align:center;
+    margin:0 10px;
+}
+.btn{
+    text-align:center;
+    color:white;
+    background: #e60000;
+    padding:5px 15px;
+    font-size: 18px;
+    cursor: pointer;
+    margin:12px 0px;
+    border-radius:7px;
+}
+.btn:hover{
+  background:#ff1a1a
+}
+.signup{
+    color:black;
+    padding:20px;
+    font-size: 17px;
+    font-weight: bold;
+    text-align:center;
+}
+.signup:hover{
+    color:#ff1a1a;
+}
+#select{
+    color:black;
+    border:none;
+    outline:none;
+    background: white;
+    font-size: 19px;
+    float:left;
+    margin: 0 10px;
+
+}
+.center{
+  padding:10px;
+  margin:auto;
+    border-radius:7px;
+    background-color:#2F4F4F;
+
+}
+.filter{
+  padding:10px;
+  margin:0px 20px;
+  width:15vw;
+   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+#sidebar {
+  position:absolute;
+  top:0px;
+  right:-220px;
+  width:220px;
+  height:100%;
+  background:rgba(0,0,0,0);
+  transition:all 300ms linear;
+}
+#sidebar.active {
+  right:0px;
+  height:100vh;
+   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+   background-color:white;
+}
+#sidebar .toggle-btn {
+  position:absolute;
+  right:240px;
+  top:10px;
+}
+#sidebar .toggle-btn span {
+  display:block;
+  width:30px;
+  height:5px;
+  background:white;
+  margin:5px 0px;
+  cursor:pointer;
+}
+#sidebar div.list div.item  {
+  padding:15px 10px;
+  font-weight: bold;
+  border-bottom:1px solid black;
+  color:blue;
+  text-transform:uppercase;
+  font-size:14px;
+}
+#sidebar div.list div.item:hover {
+transform:scale(1.01);
+}
+.results{
+
+}
+::placeholder{
+  color:white;
+}
+td{
+    padding:8px;
+}
+</style>
+  <title>Flights booking</title>
 </head>
 <body>
+<div class="wrap">
+  <nav>
+    <div class="logo">
+      <h3><i class="fa fa-suitcase" aria-hidden="true" style="padding:5px 10px;color:red;"></i>PACK YOUR BAGS</h3>
+    </div>
+    <div id="navbar">
+    <ul>
+      <li><a href="http://127.0.0.1:8000/login/{{userId}}/{{email}}"><i class="fa fa-home" aria-hidden="true" style="padding-right:10px;"></i>Home</a></li>
+      <li><a href="http://127.0.0.1:8000/login/{{userId}}/{{email}}/flights"><i class="fa fa-plane" aria-hidden="true" style="padding-right:10px;"></i>Flights</a></li>
+      <li><a href="#"><i class="fa fa-train" aria-hidden="true" style="padding-right:10px;" class="icon"></i>Trains</a></li>
+      <li><a href="#"><i class="fa fa-bus" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Buses</a></li>
+      <li><a href="#"><i class="fa fa-suitcase" aria-hidden="true" style="padding-right:10px;"class="icon"></i>Trips</a></li>
+     
+      </ul>
+      </div>
+       <div id="side-navbar">
+      <div id="sidebar">
+    <div class="toggle-btn" onclick="toggleSidebar(this)">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>  
+    <div class="list">
+      <div class="item" style="color:black;padding:6px;"><i class="fa fa-user-circle fa-4x" style="color:red;" ></i>{{firstname}} {{lastname}}</div>
+      <div class="item"><i class="fa fa-credit-card-alt" style="color:red;padding-right:10px;"></i><i class="fa fa-inr" style="color:white;padding-right:5px;"></i>{{wallet}}</div>
+      <div class="item"><a   href="http://127.0.0.1:8000/login/{{userId}}/{{email}}/profile" style="text-decoration:none;" ><i class="fa fa-user" style="padding-right:10px;color:red"></i>profile</a></div>
+      <div class="item"><a  href="http://127.0.0.1:8000/login/{{userId}}/{{email}}/changepassword" style="text-decoration:none;"><i class="fa fa-key" style="padding-right:10px;color:red"></i>change password</a></div>
+      <div class="item"><a href="#" style="text-decoration:none;"><i class="fa fa-suitcase" style="padding-right:10px;color:red"></i>My bookings</a></div>
+      <div class="item" ><a  href="{% url 'auth-login' %}" style="text-decoration:none;"><i class="fa fa-sign-out" style="padding-right:10px;color:red"></i>log out</a></div>
+    </div>
+  </div>
+      </nav>
+      </div>
+      <br><br><br><br><br>
+<table style="width=100vw;">
+<tr>
+<td valign="top" style="align:right;margin:auto;">
+<div class="filter" style="background-color:white;width:20vw;">
+<h4>Booking Summary:</h4>
+<hr>
+<table>
+<tr>
+<td valign="middle">
+<label for="ticket_price">fare per person:</label>
+</td>
+<td valign="middle">
+<i class="fa fa-inr"></i>&nbsp&nbsp<strong>3999</strong>
+</td>
+</tr>
+<tr>
+<td>
+<label for="passengers">no of passengers:</label>
+</td>
+<td>&nbsp&nbsp
+<strong>4</strong>
+</td>
+</tr>
+<tr>
+<td>
+<label for="total_price"><strong>Total fare:</strong></label>
+</td>
+<td>
+<i class="fa fa-inr"></i>&nbsp&nbsp<strong>15996</strong>
+</td>
+</tr>
+ </table>
+</td>
 
-<h1>{{company}}</h1>
-<h1>{{from_p}}</h1>
-<h1>{{to_p}}</h1>
-<h1>{{time_from}}</h1>
-<h1>{{time_to}}</h1>
-<h1>price {{price}}</h1>
-<h1>No of passengers {{passengers}}</h1>
 
-</body>
+<td style="text-align:right;padding-left:50px;vertical-align:text-top;align:left;">
+<div class="results" style="border-left-style:solid;float:right;margin:auto;border-color:grey; margin:4px, 4px; padding:4px;  ">
+<div class="flights" style="background-color:white;border-radius:7px;margin:20px;padding-top:20px;padding-bottom:20px;">
+<table>
+<tr>
+<td style="padding:5px 30px;">
+{% comment %} <img src= "authentication/images/spicejet.png" height="70"> {% endcomment %}
+<i class="fa fa-plane fa-3x" style="padding:20px;"></i>
+</td>
+<td style="padding:5px 30px;">
+<h6>AirIndigo</h6>
+</td>
+<td style="padding:5px 30px;">
+<h6>Delhi- Mumbai</h6>
+</td>
+
+<td style="padding:5px 30px;">
+<h5>12:00-15:00</h6>
+</td>
+<td style="padding:5px 30px;">
+<h6>available:12</h6>
+</td>
+<td style="padding:5px 30px;">
+<h6><i class="fa fa-inr"></i>3999</h6>
+</td>
+</tr>
+<tr>
+<br>
+{% comment %} <td style="padding:20px 30px;"> {% endcomment %}
+<h4 style="text-align:center;"><i class=" fa fa-users" style="padding:10px;"></i>Add passengers</h4>
+<br>
+<br>
+{% comment %} </td> {% endcomment %}
+</tr>
+<tr>
+<div class="passengers">
+<form method="POST">
+<table style="margin:auto;">
+{% for p in passengers %}
+<tr>
+<td style="padding:5px 30px;">
+{{p}}
+</td>
+<td >
+ <input class="form-control" type="text" value="" name="name{{p}}" placeholder="full name" required >
+</td>
+<td style="padding:5px 30px;">
+ <input class="form-control" type="number" value="" name="age{{p}}" placeholder="age" required>
+</td>
+<td style="padding:5px 30px;">
+  <select id="Gender" class="form-control" name="gender{{p}}"  required >
+             <option value="" selected disabled="true">Select gender</option>
+              <option value="Male">Male</option>
+              <option value="Female">Female</option>
+              <option value="others">Others</option>    
+ </select>
+</td>
+</tr>
+{% endfor %}
+</form>
+</div>
+</tr>
+</div>
+</div>
+</td>
+</tr>
+</table>
+<br>
+<div class="loginbtn">
+             <input class="btn" type="submit" name="" value="Confirm and Book" onclick="window.location.href='http://127.0.0.1:8000/login/{{userId}}/{{email}}/flights/book/?c1={{flights.date_pk}}&c2={{passengers}}'">
+        </div>
+ <script>
+  function toggleSidebar(ref){
+    document.getElementById("sidebar").classList.toggle('active');
+  }
+
+  
+  </script>
+</body>   
 </html>
