--- a/voyage/authentication/templates/authentication/flights_search.html
+++ b/voyage/authentication/templates/authentication/flights_search.html
@@ -326,22 +326,22 @@ transform:scale(1.01);
   {% endif %}
 <hr>
 {% if minm_price %}
-<label for="pricerange">minimumm price:</label>
- <input type="range" value="{{minm_price}}" min="0" max="30999" oninput="this.nextElementSibling.value = this.value" name="minm_price">
+<label for="pricerange">minimumm price:</label><br>
+ <input type="range" value="{{minm_price}}" min="0" max="9999" oninput="this.nextElementSibling.value = this.value" name="minm_price">
 <output>{{minm_price}}</output>&nbsp<i class="fa fa-inr"></i>
 {% else %}
-<label for="pricerange">minimumm price:</label>
- <input type="range" value="0" min="0" max="30999" oninput="this.nextElementSibling.value = this.value" name="minm_price">
+<label for="pricerange">minimumm price:</label><br>
+ <input type="range" value="0" min="0" max="9999" oninput="this.nextElementSibling.value = this.value" name="minm_price">
 <output>0</output>&nbsp<i class="fa fa-inr"></i>
 {%  endif %}
 {% if maxm_price %}
-<label for="pricerange">maximum price:</label>
-<input type="range" value="{{maxm_price}}" min="2000" max="30999" oninput="this.nextElementSibling.value = this.value" name="maxm_price">
+<label for="pricerange">maximum price:</label><br>
+<input type="range" value="{{maxm_price}}" min="10000" max="40999" oninput="this.nextElementSibling.value = this.value" name="maxm_price">
 <output>{{maxm_price}}</output>&nbsp<i class="fa fa-inr"></i>
 {% else %}
-<label for="pricerange">maximum price:</label>
-<input type="range" value="30999" min="2000" max="30999" oninput="this.nextElementSibling.value = this.value" name="maxm_price">
-<output>30999</output>&nbsp<i class="fa fa-inr"></i>
+<label for="pricerange">maximum price:</label><br>
+<input type="range" value="10000" min="10000" max="40999" oninput="this.nextElementSibling.value = this.value" name="maxm_price">
+<output>10000</output>&nbsp<i class="fa fa-inr"></i>
 {% endif %}
 
 <div class="loginbtn">
@@ -355,11 +355,12 @@ transform:scale(1.01);
 <td style="text-align:right;padding-left:50px;vertical-align:text-top;align:left;">
 <div class="results" style="border-left-style:solid;float:right;margin:auto;border-color:grey; margin:4px, 4px; padding:4px;  height: 70vh;  overflow-x: hidden; overflow-y: auto; text-align:justify; ">
 {% for flights in flights %}
-<div class="flights" style="background-color:white;border-radius:7px;margin:20px;">
+<div class="flights" style="background-color:white;border-radius:7px;margin:20px;padding:20px;">
 <table>
 <tr>
 <td style="padding:5px 30px;">
-<img src= "{% static 'authentication/images/SpiceJet.png' %}" height="70">
+<i class="fa fa-plane fa-3x" style="color:red;"></i>
+{% comment %} <img src= "{% static 'authentication/images/SpiceJet.png' %}" height="70"> {% endcomment %}
 </td>
 <td style="padding:5px 30px;">
 <h6>{{flights.company}}</h6>
@@ -375,7 +376,7 @@ transform:scale(1.01);
 <h6>available:{{flights.available}}</h6>
 </td>
 <td style="padding:5px 30px;">
-<h6><i class="fa fa-inr"></i>{{flights.price}}</h6>
+<h6><i class="fa fa-inr"></i>&nbsp&nbsp{{flights.price}}</h6>
 </td>
 <td style="padding:5px 30px;">
 <div class="loginbtn">
